# X_Facebook-MCP

./: CLAUDE_CODE_SETUP.md  README.md  SETUP.md  gitignore  pyproject.toml
src/social_mcp/: __init__.py  __main__.py  config.py  facebook.py  oauth_flow.py  refresh_twitter.py  server.py  token_store.py  twitter.py
