[project]
name = "social-mcp"
version = "0.2.0"
description = "Production-grade MCP server for Twitter/X and Facebook Pages with media upload. Genuine APIs, encrypted tokens, PKCE OAuth, designed for long-term reliability."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Joodei Consultancy", email = "hello@joodei.com" },
]
license = { text = "MIT" }
dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "cryptography>=42.0",
  "keyring>=25.0",
  "anyio>=4.4",
  "requests>=2.31",
  "requests-oauthlib>=1.3",
]

[project.scripts]
social-mcp = "social_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/social_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
